testdata/baselines/reference/submodule/compiler/argumentsReferenceInMethod1_Js.errors.txt
/a.js(3,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class A {
    	/**
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	m(foo = {}) {
    		/**
    		 * @type object
    		 */
    		this.arguments = foo;
    	}
    }
    